--- a/.github/workflows/redmi_ax6000_hanwckf.yml
+++ b/.github/workflows/redmi_ax6000_hanwckf.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: redmi_ax6_basic
+name: redmi_ax6000_hanwckf
 
 on:
   repository_dispatch:
@@ -20,10 +20,10 @@ on:
         default: 'false'
 
 env:
-  REPO_URL: https://github.com/sdf8057/lede.git
-  REPO_BRANCH: ipq807x
+  REPO_URL: https://github.com/hanwckf/immortalwrt-mt798x.git
+  REPO_BRANCH: openwrt-21.02
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: ./config/redmi_ax6/redmi_ax6_basic.config
+  CONFIG_FILE: ./config/redmi_ax6/redmi_ax6000_hanwckf.config
   DIY_P1_SH: ./custom/redmi_ax6/basic/diy-part1.sh
   DIY_P2_SH: ./custom/redmi_ax6/basic/diy-part2.sh
   UPLOAD_BIN_DIR: false
