--- a/.github/workflows/ct3003.yml
+++ b/.github/workflows/ct3003.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: h3c-nx30pro
+name: ct3003
 
 on:
   repository_dispatch:
@@ -20,10 +20,10 @@ on:
         default: 'false'
 
 env:
-  REPO_URL: https://github.com/hanwckf/immortalwrt-mt798x.git
-  REPO_BRANCH: openwrt-21.02
+  REPO_URL: https://github.com/padavanonly/immortalwrtARM
+  REPO_BRANCH: mt7981
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: h3c-nx30pro.config
+  CONFIG_FILE: ct3003.config
   DIY_P1_SH: ./custom/cmiot_ax18/basic/diy-part1.sh
   DIY_P2_SH: ./custom/cmiot_ax18/basic/diy-part2.sh
   UPLOAD_BIN_DIR: false
