--- a/.github/workflows/ct3003.yml
+++ b/.github/workflows/ct3003.yml
@@ -24,8 +24,8 @@ env:
   REPO_BRANCH: mt7981
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: ct3003.config
-  DIY_P1_SH: ./custom/cmiot_ax18/basic/diy-part1.sh
-  DIY_P2_SH: ./custom/cmiot_ax18/basic/diy-part2.sh
+  DIY_P1_SH: ./custom/cmiot_ax18/plus/diy-part1.sh
+  DIY_P2_SH: ./custom/cmiot_ax18/plus/diy-part3.sh
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
   UPLOAD_COWTRANSFER: false
@@ -155,9 +155,9 @@ jobs:
       id: tag
       if: env.UPLOAD_RELEASE == 'true' && !cancelled()
       run: |
-        echo "release_tag=CT3003_$(date +"%Y.%m.%d-%H%M")" >>$GITHUB_OUTPUT
+        echo "release_tag=ct3003_$(date +"%Y.%m.%d-%H%M")" >>$GITHUB_OUTPUT
         touch release.txt
-        echo "CT3003 firmware" >> release.txt
+        echo "ct3003 firmware" >> release.txt
         [ $UPLOAD_COWTRANSFER = true ] && echo "🔗 [Cowtransfer](${{ steps.cowtransfer.outputs.url }})" >> release.txt
         [ $UPLOAD_WETRANSFER = true ] && echo "🔗 [WeTransfer](${{ steps.wetransfer.outputs.url }})" >> release.txt
         echo "status=success" >>$GITHUB_OUTPUT
