--- a/.github/workflows/360_t7_21.02.yml
+++ b/.github/workflows/360_t7_21.02.yml
@@ -22,7 +22,7 @@ on:
 env:
   REPO_URL: https://github.com/hanwckf/immortalwrt-mt798x
   REPO_BRANCH: openwrt-21.02
-  FEEDS_CONF: feeds.conf.default
+  FEEDS_CONF: custom/cmiot_ax18/21.02.feeds.conf.default
   CONFIG_FILE: ./config/cmiot_ax18/360_t7_basic.config
   DIY_P1_SH: ./custom/cmiot_ax18/basic/diy-part1.sh
   DIY_P2_SH: ./custom/cmiot_ax18/basic/diy-part2.sh
