--- a/.github/workflows/asr3000.yml
+++ b/.github/workflows/asr3000.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: ct3003
+name: abt_asr3000
 
 on:
   repository_dispatch:
@@ -20,12 +20,12 @@ on:
         default: 'false'
 
 env:
-  REPO_URL: https://github.com/padavanonly/immortalwrtARM
-  REPO_BRANCH: mt7981
-  FEEDS_CONF: custom/cmiot_ax18/18.06.feeds.conf.default
-  CONFIG_FILE: ct3003.config
-  DIY_P1_SH: ./custom/cmiot_ax18/plus/diy-part1.sh
-  DIY_P2_SH: ./custom/cmiot_ax18/plus/diy-part3.sh
+  REPO_URL: https://github.com/hanwckf/immortalwrt-mt798x
+  REPO_BRANCH: openwrt-21.02
+  FEEDS_CONF: custom/cmiot_ax18/21.02.feeds.conf.default
+  CONFIG_FILE: asr3000.config
+  DIY_P1_SH: ./custom/cmiot_ax18/basic/diy-part1.sh
+  DIY_P2_SH: ./custom/cmiot_ax18/basic/diy-part2.sh
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
   UPLOAD_COWTRANSFER: false
