--- a/rax3000m.config
+++ b/rax3000m.config
@@ -1,6 +1,6 @@
 CONFIG_TARGET_mediatek=y
 CONFIG_TARGET_mediatek_mt7981=y
-CONFIG_TARGET_MULTI_PROFILE=y
+# CONFIG_TARGET_MULTI_PROFILEis not set
 # CONFIG_TARGET_mediatek_mt7981_DEVICE_mt7981-spim-nor-rfb is not set
 # CONFIG_TARGET_mediatek_mt7981_DEVICE_mt7981-spim-nand-2500wan-gmac2 is not set
 # CONFIG_TARGET_mediatek_mt7981_DEVICE_mt7981-spim-nand-rfb is not set
@@ -30,7 +30,7 @@ CONFIG_TARGET_MULTI_PROFILE=y
 # CONFIG_TARGET_mediatek_mt7981_DEVICE_jcg_q30 is not set
 # CONFIG_TARGET_mediatek_mt7981_DEVICE_livinet_zr-3020 is not set
 # CONFIG_TARGET_mediatek_mt7981_DEVICE_cmcc_a10 is not set
-# CONFIG_TARGET_mediatek_mt7981_DEVICE_cmcc_rax3000m is not set
+CONFIG_TARGET_mediatek_mt7981_DEVICE_cmcc_rax3000m=y
 # CONFIG_TARGET_mediatek_mt7981_DEVICE_cmcc_rax3000m-emmc is not set
 # CONFIG_TARGET_mediatek_mt7981_DEVICE_h3c_nx30pro is not set
 # CONFIG_TARGET_mediatek_mt7981_DEVICE_konka_komi-a31 is not set
