--- a/rax3000m.config
+++ b/rax3000m.config
@@ -337,7 +337,7 @@ CONFIG_PACKAGE_luci-app-ttyd=y
 # CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Xray_plugin is not set
 # CONFIG_PACKAGE_luci-app-vssr_INCLUDE_ShadowsocksR_Libev_Server=y
 # CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Hysteria is not set
-CONFIG_PACKAGE_luci-app-wechatpush=y
+# CONFIG_PACKAGE_luci-app-wechatpush is not set
 CONFIG_PACKAGE_luci-app-zerotier=y
 CONFIG_PACKAGE_luci-i18n-mtk-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-upnp-zh-cn is not set
